# crafting-interpreters

./: README.md
challenges/c_double_linked_list/: index.py
clox/: main.c
plox/: README.md  main.py  pyproject.toml  test-ast-printer.py
plox/examples/: 1-char-tokens.lox  10-statements-assign.lox  12-if-stmt.lox  13-logical.lox  14-loops.lox  15-native-lib.lox  16-user-func.lox  17-return-values.lox  18-annon-funcs-this-fails-now.lox  18-annon-funcs.lox  19-test-scope.lox  2-multi-line-with-comments.lox  3-trying-strings.lox  4-numbers-now.lox  5-full-lox.lox  6-with-multi-line-comments.lox  7-one-stmt.lox  9-statements-vars.lox
plox/grammar/: v0.md
plox/src/: environment.py  parser.py  resolver.py  scanner.py  tokens.py
plox/src/ast/: schema.py
plox/src/ast/expr/: schema.py  visitor.py
plox/src/ast/stmt/: schema.py  visitor.py
plox/src/interperter_lib/: exceptions.py  interfaces.py  interpreter.py  schema.py
plox/src/interperter_lib/native_lib/: time.py
plox/src/visitors/: ast_printer.py  contract.py  interpreter.py
