[project]
name = "plox"
version = "0.1.0"
description = ""
authors = ["Alrahma <abdulrahman@alrahma.me>"]
readme = "README.md"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'I']
extend-ignore = [
    'E721',  # using type() instead of isinstance() - we use this in tests
]
flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}
mccabe = { max-complexity = 13 }
isort = { known-first-party = ['pydantic_core', 'tests'] }

[tool.ruff.format]
quote-style = 'single'

